# thales-dpod-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: README.md  mcp-config-uv.json  mcp-config.json
docs/: prompts.md  testing.md
src/dpod_mcp_server/: __init__.py
src/dpod_mcp_server/core/: __init__.py  auth.py  config.py  dependency_injection.py  logging_utils.py  scope_manager.py  scope_wrapper.py  validation.py
src/dpod_mcp_server/prompts/: __init__.py  service_prompts.py
src/dpod_mcp_server/resources/: __init__.py  server_resources.py
src/dpod_mcp_server/tools/: __init__.py
src/dpod_mcp_server/tools/audit/: __init__.py  audit_tools.py
src/dpod_mcp_server/tools/credentials/: __init__.py  credential_tools.py
src/dpod_mcp_server/tools/dpod_availability/: __init__.py  dpod_availability_tools.py
src/dpod_mcp_server/tools/pricing/: __init__.py  pricing_tools.py
src/dpod_mcp_server/tools/products/: __init__.py  product_tools.py
src/dpod_mcp_server/tools/reports/: __init__.py  report_tools.py
src/dpod_mcp_server/tools/scopes/: __init__.py  scope_tools.py
src/dpod_mcp_server/tools/service_agreements/: __init__.py  service_agreement_tools.py
src/dpod_mcp_server/tools/services/: README.md  __init__.py  service_tools.py
src/dpod_mcp_server/tools/subscriber_groups/: __init__.py  subscriber_group_tools.py
src/dpod_mcp_server/tools/subscriptions/: __init__.py  subscription_tools.py
src/dpod_mcp_server/tools/tenants/: __init__.py  tenant_helpers.py  tenant_tools.py
src/dpod_mcp_server/tools/tiles/: __init__.py  tile_tools.py
src/dpod_mcp_server/tools/users/: __init__.py  user_tools.py
